@@ -164,6 +164,9 @@ admin.holo.remove.noHolo: '&4No holograms found'
 admin.holo.remove.success: '&6Hologram deleted'
 admin.title.success: '&6that players title has been changed'
 admin.version: '&6Current plugin version: %s'
+admin.noTeam: '&4That is not a team'
+admin.home.success: '&6You have been teleported to that teams home'
+admin.home.noHome: '&4That team does not have a home set'
 
 # for the nametag syntax
 nametag.syntax: '&6&l%s&r '
